--- a/rapport/combinaison.tex
+++ b/rapport/combinaison.tex
@@ -1,1 +1,12 @@
 \section{Combinaison des classifieurs}
+\subsection{Description de la méthode}
+Enfin, nous avons combiné nos différents classifieurs, par produit des probabilités obtenues à travers ces différents classifieurs. Dans le cas du classifieur par détection de convexité, le résultat obtenu n’est pas un vecteur de probabilité associée à chaque classe, mais un nombre de doigt. Afin de combiner ce résultat aux vecteurs de probabilité retournés par chaque autre classifieur, nous avons défini la probabilité de la classe retournée à 1, toutes les autres étant mises à 0. Nous avons combiné les résultats par somme des vecteurs de probabilité d'appartenance à chaque classe, en effet combiner par produit donnerait toujours le résultat du classifieur par convexités.
+
+\subsection{Analyse des résultats}
+Seul le classifieur par histogramme radial utilise la méthode des KPPV dans les tests effectués, ce qui lui donne une prépondérance lorsque $k < NB\_CLASSES$ sur les classifieurs par profil, par histogramme, et par zoning.
+
+Ainsi, les différents vecteurs de probabilité ont été combinés par produit. Nous avons testé une base d’apprentissage de 49 images au total. Ce sont par ailleurs ces mêmes images que nous avons testé. Bien que cela puisse fausser certains résultats, notamment dans le cas où K vaut 1 (pour le classifieur par histogramme radial), nous avons considéré que notre base était suffisamment étendue pour que l’erreur induite reste assez faible.
+
+Finalement, nous obtenons un taux de reconnaissance compris entre 85.7\% et 89.8\% de réussite dans le cas où $K = 1$, en fonction des différents paramètres des autres classifieurs (nombre de lignes à considérer dans le cas des classifieurs par profil et par histogramme, nombre de subdivisions de l’image dans le cadre du classifieur par densité), nous obtenons entre 51\% et 53\% lorsque $K$ vaut 2, enfin à partir de $K = 3$ nos résultats se stabilisent à 44.9\%.
+
+Afin d’obtenir des résultats plus probants, il nous faudrait disposer d’une base d’apprentissage plus étendue, mais également d’un jeu d’images test non présentes dans la base d’apprentissage. Par ailleurs, dans les tests effectués nous n’avons pas utilisé la méthode des KPPV pour les classifieurs par profil, par histogramme et par densité, ce qui rend leur influence secondaire par rapport au classifieur par détection de convexité (dont les probabilités retournés sont binaires, 0 ou 1), mais également par rapport au classifieur par histogramme radial dans le cas où $K < NB\_CLASSES$. Ainsi, leur influence au cours de ces tests reste modeste, et ce quelques soient les paramètres associés à ces trois classifieurs.
