--- a/rapport/rapport.tex
+++ b/rapport/rapport.tex
@@ -2,7 +2,7 @@
 \usepackage[utf8]{inputenc}
 \usepackage[frenchb]{babel}
 \usepackage{graphicx}
-\usepackage{amsmath}
+\usepackage{mathtools}
 \usepackage{pgffor}
 \usepackage[hidelinks]{hyperref}
 
@@ -18,6 +18,8 @@
 \input{presentationGlobale}
 
 \input{segmentation}
+
+\input{redressement}
 
 \section{Classification}
 
